componentes login (google)
Se crean los componentes para la autenticacion por cuenta de google

--- a/crud/src/app/app.component.html
+++ b/crud/src/app/app.component.html
@@ -92,8 +92,8 @@
                         <label>Departamento</label>
                         <div class="input-field col s12">
                             <select id="listCenTra">
-                                <option value="" *ngFor="let departamentos of departamentos">
-                                   {{departamentos.nombre}}
+                                <option value="" *ngFor="let departamento of departamentos">
+                                   {{departamento.nombre}}
                                </option>
                               </select>
                       </div>
