--- a/crud/src/app/app.component.html
+++ b/crud/src/app/app.component.html
@@ -1,3 +1,6 @@
-<app-crear-evento></app-crear-evento>
-<!--router-outlet></router-outlet-->
+<app-login></app-login>
+<div class="container">
+    <router-outlet></router-outlet>
+</div>
+
 
