--- a/crud/src/app/components/users/login/login.component.html
+++ b/crud/src/app/components/users/login/login.component.html
@@ -1,1 +1,6 @@
-<p>login works!</p>
+<div class="form-group">
+    <a href="#" class="btn-social btn-google" (click)="onLoginGoogle()">
+        <span class="fa fa-google"></span>
+        GOOGLE
+    </a>
+</div>
