--- a/crud_ingresar_eventos/src/app/app.component.html
+++ b/crud_ingresar_eventos/src/app/app.component.html
@@ -88,24 +88,13 @@
      <label >lista eventos</label>
      <label >haga click en el nombre del evento a modificar</label>
      <br>
-     <ul   >
-
-
-
-          <div >
-              <div >
-                  <select onchange="datosclicked(datosM)"  >
-                      <option *ngFor= "let datosM of datos" >
-                          <h2 (click)=datosclicked(datosM) > {{datosM.titulo}}</h2> 
+     <ul>
+                     <li *ngFor= "let datosM of datos">
+                      <h2 id="llamada" (click)=datosclicked(datosM) > {{datosM.titulo}}</h2> 
+                     </li>  
                           
-                     </option>
-                    </select>
-                  
-                  <br>
-                  <br>
-            </div>
-          </div>
-        
+                          
+                 
         
           
 </ul>
@@ -117,6 +106,7 @@ fecha<input type="date" [(ngModel)]="seleccionarEvento.fecha"/><br>
 hora<input type="time" [(ngModel)]="seleccionarEvento.hora"/><br> 
 ruta<input type="text" [(ngModel)]="seleccionarEvento.rutaLugar"/><br>
 calificacion<input type="text" [(ngModel)]="seleccionarEvento.calificacionP"/><br> 
+<label >cambiar el nombre departamento por la id</label>
 deptartamento<input type="text" [(ngModel)]="seleccionarEvento.idDepartamento"/><br> <!-- * comentarla* -->
     <div >
         <div >
@@ -140,8 +130,13 @@ deptartamento<input type="text" [(ngModel)]="seleccionarEvento.idDepartamento"/>
 
     <label >imagen</label>
     <input type="file" (change)="onFileSelected($event)"><br>
+  
     <br>
-    <button type="button" (click)="subirImagen()" >cargar imagen</button>
+    <button type="button" (click)="subirImagen()" >cargar imagen</button><br>
+    <br>
+    <br>
+
+    <input type="file" (change)="cargandoImagen($event.target.files)" multiple>
 
        
    
