--- a/crud_ingresar_eventos/src/app/app.component.html
+++ b/crud_ingresar_eventos/src/app/app.component.html
@@ -128,11 +128,15 @@ deptartamento<input type="text" [(ngModel)]="seleccionarEvento.idDepartamento"/>
       <button (click)="borrarEvento">borar evento</button>
     </div>
 
-     <br>
-     <br>
-     <br>
-     <label >imagen</label><br>
-    <input type="file" (change)="cargandoImagen($event.target.files)">
+    <label >imagen</label>
+    <input type="file" (change)="onFileSelected($event)"><br>
+  
+    <br>
+    <button type="button" (click)="subirImagen()" >cargar imagen</button><br>
+    <br>
+    <br>
+
+    <input type="file" (change)="cargandoImagen($event.target.files)" multiple>
 
        
    
